<resources>
    <string name="app_name">Noter</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Enter tag or note name to search ...</string>
    <string name="title_hint">Your title here</string>
    <string name="content_hint">Your note here</string>
    <string name="add_tag">New Tag</string>
    <string name="rm_tag">Remove Tag</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="add_tag_title">Create a new Tag</string>
    <string name="add_tag_hint">Enter Tag name</string>
    <string name="add_tag_color_hint">Choose Tag color</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="remove_note">Remove Note</string>
</resources>